--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"philo.h": "c"
+		"philo.h": "c",
+		"unistd.h": "c",
+		"stdlib.h": "c",
+		"philo_bonus.h": "c"
 	}
 }
